tests/neg/forwardCompat-rejectNewerTasty/Bar_2_r3.0.scala
def bar = foo // nopos-error
